<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/geoluks_logo_content"
        android:src="@drawable/logologin" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tv_term_conditions"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_social_msj"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/select_social_network" 
            android:textColor="@android:color/black"
            android:shadowColor="@android:color/darker_gray"
            android:shadowRadius="1.5"
            android:shadowDx="1"
            android:shadowDy="2"
            />

        <Button
            android:id="@+id/btnFacebook"
            style="@style/LoginButtons"
        
            android:background="@drawable/background_btn_facebook_login"
            android:text="@string/btn_facebook_login" />
        
         <Button
            android:id="@+id/btnFoursquare"
            style="@style/LoginButtons"   
            android:text="@string/btn_foursquare_login" 
            android:background="@drawable/background_btn_foursquare_login"  />
         
          <Button
            android:id="@+id/btnGoogleP"
            style="@style/LoginButtons"   
            android:background="@drawable/background_btn_google_login" 
            android:text="@string/btn_google_login"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_term_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:textColor="@android:color/background_dark"
        android:contentDescription="@string/term_conditions"
        android:src="@drawable/btnterminosycondiciones"
        android:text="@string/term_conditions" />

</RelativeLayout>